# ws_ur10_s

./: CMakeLists.txt  README.md  package.xml
src/combination/config/: joints.yaml
src/combination/launch/: display.launch  gazebo.launch
src/combination/meshes/: 3d_camera.STL  base_link.STL  extender.STL  joint_1.STL  joint_2.STL  joint_3.STL  joint_4.STL  joint_5.STL  joint_6.STL  on_arm.STL  on_arm2d_camera.STL
src/combination/urdf/: combination.csv  combination.urdf
src/combination/urdf/xacro/: combination.xacro
